--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FFFFFF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="More than fans. Discover our blogs updated daily, about current f1 stories, grand prix reviews and analytics. Check out all current drivers and teams and their history!"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
