--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>f1anatics</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1181900724554456"
+     crossorigin="anonymous"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
